fix: corregir validaciones en middleware, relaciones rotasy Swagger
